# dbzap

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
specs/: 00-overview.md  01-config.md  02-db-introspection.md  03-type-mapping.md  04-rest-api-generator.md  05-graphql-api-generator.md  06-auth.md  07-server-bootstrap.md  08-api-explorer-frontend.md  09-graphql-relay-filtering.md  09-healthz.md  10-performance.md
src/dbzap/auth/: dependencies.py  models.py  passwords.py  rate_limit.py  routes.py  tokens.py  user_store.py
src/dbzap/core/: config.py  engine.py  introspector.py  type_mapping.py
src/dbzap/generators/: filter.py  graphql.py  rest.py
src/dbzap/server/: __main__.py  app.py  health.py  metrics.py  middleware.py
src/dbzap/server/static/: index.html
src/dbzap/server/static/css/: dashboard.css  style.css
src/dbzap/server/static/js/: api.js  app.js  dashboard.js  graphql.js  health.js  metrics-parser.js  request.js  response.js  sidebar.js  sparkline.js
tests/test_auth/: test_dependencies.py  test_passwords.py  test_rate_limit.py  test_routes.py  test_tokens.py  test_user_store.py
tests/test_core/: conftest.py  test_config.py  test_introspector.py  test_type_mapping.py
tests/test_generators/: test_graphql.py  test_rest.py
tests/test_server/: test_app.py  test_explorer.py  test_health.py  test_metrics.py  test_middleware.py
