[project]
name = "dbzap"
version = "0.1.0"
description = "Zero-config REST & GraphQL API generator from database DDL with auth, filtering, and pagination"
authors = [
    {name = "msqtt"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "strawberry-graphql (>=0.316.0,<0.317.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)"
]


[project.scripts]
dbzap = "dbzap.server.__main__:serve"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dbzap", from = "src"}]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "types-python-jose (>=3.5.0.20260408,<4.0.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
